--- a/20180902test.md
+++ b/20180902test.md
@@ -7,10 +7,10 @@
   ### 1. 시작하는 개념
 
 
-      ### - 시작합니다
+      ### 시작합니다
 
 
-      ### - 다음입니다
+      ### 다음입니다
 
 
-      ### - 세번째입니다
+      ### 세번째입니다
