--- a/20180902test.md
+++ b/20180902test.md
@@ -4,14 +4,11 @@
 ## Index
 
 
-  ### 1. 시작하는 개념
-
-       * [linear-gradient](#linear-gradient)
-
-      *      시작합니다
-
-
-      *      다음입니다
-
-
-      *      세번째입니다
+1. 시작하는 개념
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
+ * [border-radius](#border-radius)
