--- a/20180902test.md
+++ b/20180902test.md
@@ -5,10 +5,7 @@
 
 
 1. 시작하는 개념
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
- * [border-radius](#border-radius)
+ * [안녕하세요](#border-radius)
+ * [두번째입니다](#border-radius)
+ * [세번째입니다](#border-radius)
+ * [네번째입니다](#border-radius)
