--- a/20180902test.md
+++ b/20180902test.md
@@ -9,3 +9,12 @@
  * [두번째입니다](#border-radius)
  * [세번째입니다](#border-radius)
  * [네번째입니다](#border-radius)
+
+---
+
+1.CSS 개념
+----------
+
+##### linear-gradient
+
+##### 구문
