--- a/20180902test.md
+++ b/20180902test.md
@@ -5,7 +5,7 @@
 
 
 1. 시작하는 개념
- * [안녕하세요](#border-radius)
+ * [안녕하세요](#linear-gradient)
  * [두번째입니다](#border-radius)
  * [세번째입니다](#border-radius)
  * [네번째입니다](#border-radius)
@@ -14,6 +14,26 @@
 
 1.CSS 개념
 ----------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ##### linear-gradient
 
